infrastructure/storage/minio/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: minio-security
  namespace: minio-system
spec:
  headers:
    #Security Headers
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    #HTTPS Redirect Headers
    sslRedirect: true
    sslTemporaryRedirect: true
    #HSTS
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: minio-ipwhitelist
  namespace: minio-system
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.0.0/16
      - 172.16.0.0/12
      - 10.0.0.0/8
