infrastructure/storage/minio/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-system
  labels:
    name: minio-system
