infrastructure/storage/minio/stateful.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio-system
spec:
  serviceName: minio
  replicas: 4
  selector:
    matchLabels:
        app: minio  
  template:
    metadata:
      labels:
        app: minio
    spec:
      serviceAccountName: minio-operator-sa
      containers:
      - name: minio
        image: minio/minio:RELEASE.2020-05-28T23-29-21Z
        args:
        - server
        - http://minio-{0...3}.minio.minio-system.svc.cluster.local/data
        ports:
        - containerPort: 9000
        #resources:
          #limits:
          #  cpu: 200m
          #  memory: 400Mi
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-storage
      resources:
        requests:
          storage: 50Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio-system
  labels:
    app: minio
spec:
  clusterIP: None
  selector:
    app: minio
  ports:
  - port: 9000
    name: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio-system
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
